# rendsite

./: .gitignore  Pipfile  Procfile  build.sh  manage.py  pyproject.toml  render.yaml  server.py
betcodes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
betcodes/migrations/: 0001_initial.py  0002_betcode_odd.py  0003_bookcodeinfo.py  0004_rename_ticket_time_bookcodeinfo_ticket_date.py  0005_alter_betcode_placed_at_alter_bookcodeinfo_placed_at.py
core/: admin.py  apps.py  models.py  serializers.py  urls.py
core/migrations/: 0001_initial.py  0002_user_phone.py  0003_alter_user_phone.py  0004_alter_user_phone.py  0005_alter_user_phone.py  0006_remove_user_phone.py  0007_user_phone.py
core/signals/: handlers.py
core/static/core/: styles.css
core/templates/core/: index.html
database/: asgi.py  urls.py  wsgi.py
database/settings/: common.py  dev.py  prod.py
superMart/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
superMart/migrations/: 0001_initial.py
training/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
training/migrations/: 0001_initial.py  0002_alter_course_price.py  0003_courseimage.py  0004_student.py  0005_studentimage.py  0006_rename_course_studentimage_student.py  0007_courseclass.py
