[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Victor Umedum <victorumedum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
mysqlclient = "*"
djangorestframework = "*"
drf-nested-routers = "*"
django-filter = "*"
djoser = "*"
django-cors-headers = "*"
pillow = "*"
waitress = "*"
django-debug-toolbar = "*"
tk-tools = "*"
psycopg2 = "*"
psycopg = "*"
sqlalchemy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
